force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/zkmulti__ShipmateGeneralSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deprecated</description>
    <label>Zenkraft General Settings (Deprecated)</label>
</CustomObject>