force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Boxing_Algorithm_Show_Products__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Boxing_Algorithm_Show_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Products in Wizard</label>
    <type>Checkbox</type>
</CustomField>