force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Debug_ZK_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Debug_ZK_API_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug ZK API Calls</label>
    <type>Checkbox</type>
</CustomField>