force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Enable_Zk_Api__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Enable_Zk_Api__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Zk Api</label>
    <type>Checkbox</type>
</CustomField>