force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__ScheduledTrackingNumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduledTrackingNumberOfDays__c</fullName>
    <defaultValue>180</defaultValue>
    <label>Scheduled tracking - number of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>