force-app/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__USPSWebAPIUserID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__USPSWebAPIUserID__c</fullName>
    <label>USPS Web API UserID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>